# Orange3-widgets

./: .gitignore  MANIFEST.in  README.md  documentation_all_widgets.md  documentation_lightgbm_optuna.md  pyproject.toml  setup.py
orangecontrib/custom/: install.bat
orangecontrib/custom/widgets/: __init__.py  gmm_widget.py  hmm_widget.py  lgbm_optuna.py  yf.py  zigzag.py
